Fix some table layouts on mobile

--- a/www/_sass/_layout.scss
+++ b/www/_sass/_layout.scss
@@ -93,7 +93,7 @@
 .table-col {
     float: left;
     margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    padding-right: $spacing-unit / 2;
     width: -webkit-calc(48% - (#{$spacing-unit} / 2));
     width:         calc(48% - (#{$spacing-unit} / 2));
 }
